cif/org.eclipse.escet.cif.tests/tests/cif2plc/negative_zero_twincat/negative_zero_twincat_real/Untitled1/DUTs/STATE.TcDUT
<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<TcPlcObject ProductVersion="3.1.0.18" Version="1.1.0.1">
  <DUT Name="STATE">
    <Declaration>
      <![CDATA[TYPE STATE:
    STRUCT
        curTime: LREAL;
        dvar_M_p_v0 AT %Q*: LREAL;
        dvar_M_p_v1 AT %Q*: DINT;
        dvar_M_p_v2 AT %Q*: DINT;
        dvar_M_p_v3 AT %Q*: DINT;
        dvar_M_p_v99 AT %Q*: LREAL;
        dvar_M_p_vx AT %Q*: LREAL;
        dvar_M_p_vr AT %Q*: TupleStruct_1;
        dvar_M_p AT %Q*: enum_E;
    END_STRUCT
END_TYPE]]>
    </Declaration>
    <ObjectProperties/>
  </DUT>
</TcPlcObject>
